updated location page and removed rsvp from nav
can still navigate to rsvp through url, just working on updates for that

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kelsey &amp; Patrick</title>
-    <meta name="description" content="Patrick and Kelsey wedding website">
-    <meta name="keywords" content="Kelsey,Aiken,Patrick,Kosnik,Wedding">
-    <meta name="author" content="John Doe">
+    <meta name="description" content="Patrick and Kelsey wedding website. Patrick Kosnik and Kelsey Aiken will be married in October of 2018. The wedding will take place in Ann Arbor, Michigan.">
+    <meta name="keywords" content="Kelsey,Aiken,Patrick,Kosnik,Wedding, Patrick Kosnik, Kelsey Aiken">
+    <meta name="author" content="Patrick Kosnik">
   </head>
   <body>
     <div id="root">
