update to registry page

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.png" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kelsey &amp; Patrick</title>
-    <meta name="description" content="Patrick and Kelsey wedding website. Patrick Kosnik and Kelsey Aiken will be married in October of 2018. The wedding will take place in Ann Arbor, Michigan.">
+    <meta name="description" content="Patrick Kosnik and Kelsey Aiken met in Ann Arbor Michigan where they both attending school. They will return to Ann Arbor to celebrate their wedding together. Their wedding ceremony will take place on October 12th, 2018.">
     <meta name="keywords" content="Kelsey,Aiken,Patrick,Kosnik,Wedding, Patrick Kosnik, Kelsey Aiken">
     <meta name="author" content="Patrick Kosnik">
   </head>
